# Automated-Options-Trading-System

./: CMakeLists.txt  README.md  main.py
include/: algo.h  backtester.hpp  closing_filter.hpp  option.h  option.hpp  option_chain.h  option_filter.hpp  option_map.hpp  order.h  orderbook.h  portfolio.h  portfolio.hpp  position.h  util.h  util.hpp
src/: main.cpp  main.py  market_data_retrieval.py
src/API/: AV_historical_data.py  access_token.py  expire_dates.py  market_data_retrieval.py  option_chain.py  portfolio_data_retrieval.py
src/algo/: algo.cpp  backtester.cpp  closing_filter.cpp  option.cpp  option_chain.cpp  option_filter.cpp  option_map.cpp  order.cpp  portfolio.cpp  position.cpp
src/filters/: filter.csv
